Resolves: tdf#118827 SetCareWin should be SetCareDialog

Change-Id: I84c00a193e65a18b3ba82351c07be0b63e0cd5d4